# qEEG-analysis

./: .gitignore  AGENTS.md  CLAUDE.md  Codex CLI Build Prompt.md  HANDOFF_MULTI_PDF.md  HANDOFF_SINGLE_AGENT_5SESSION_REPORT.md  LICENSE  README.md  plan.md  pyproject.toml  start.sh
.claude/: handoff.md
.cli-proxy-api/: README.md
.codex/: handoff.md  hooks.json
.codex/hooks/: qeeg_session_context.py  qeeg_stop_guard.py
.codex/skills/: handoff.md
backend/: AGENTS.md  __init__.py  apple_vision_ocr.py  cliproxy_status.py  config.py  council.py  exports.py  llm_client.py  logging_utils.py  main.py  model_selection.py  orchestration.py  patient_facing_pdf.py  patient_files.py  portal_sync.py  reports.py  storage.py
backend/council/: __init__.py  ai_review_agents.py  constants.py  db_utils.py  json_utils.py  paths.py  prompts.py  report_assets.py  report_text.py  types.py  utils.py  vision.py
backend/prompts/: stage1_analysis.md  (+5 more)
examples/: final-patient-facing-writeup-example.md
frontend/: AGENTS.md  eslint.config.js  package-lock.json  package.json  playwright-fullstack.config.js  playwright.config.js
grants/: qEEG_Explainer_Grant_Proposal.md  qEEG_Grant_Requirements_Checklist.md
scripts/: compress_portal_videos.py  create_combined_council_report.py  generate_patient_facing_writeups.py  generate_single_agent_patient_report.py  mk_portal_patient_folder.py  portal_pipeline_worker.py  run_e2e_demo.py  run_existing_council.py  run_portal_council_batch.py  stage_council_artifacts.py  validate_against_pdf.py  validate_patient_facing_numbers.py
(+102 files in other folders)
